--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 "name": "leaflet-pouch",
   "version": "0.0.1",
   "dependencies": {
-    "coffee-script":"1.x"
+    "coffee-script":"1.x",
+    "uglify-js" : ">= 0.0.1"
   }
 }
